# open-overleaf-claw

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  settings.default.json
README/design/: 01_Project.md  02_Session.md  03_AgentLoop.md  04_Context_Management.md  05_History.md  06_Memory.md  07_隔离机制.md  08_Tool_System.md  09_Chat_Channel.md  10_Command_System.md  11_Scheduler.md  13_Git管理.md  14_Overleaf同步.md  15_LLM_Engine.md  16_Configuration.md  17_Task_Mode.md  18_Task_Mode_Example.md  19_Research_Radar_Automation.md  20_Memory_Store_Unification.md  21_Prompt_Externalization.md  21_Web_Automation_Management_Implementation.md  22_Agent_Profile.md  23_Gateway_WebUI.md
README/guide/: 01_Overview_en.md  01_项目概览.md  02_Workspace_and_Session_en.md  02_工作空间与Session.md  03_Agent_Collaboration_en.md  (+14 more)
agent/: context.py  git_agent.py  loop.py  prompt_builder.py  task_agent.py
bus/: events.py  queue.py
channels/: __init__.py  base.py  feishu.py  im_dingtalk.py  im_qq.py  im_telegram.py  telegram.py
cli/: main.py  renderer.py  setup.py  wizard.py
config/: agents.json  commands.json  diagnostics.py  features.json  i18n.json  loader.py  modes.json  registry.py  roles.json  schema.py  tools.json  vfs.json
core/: project.py  prompts.py  session.py
providers/: base.py  litellm_provider.py  openai_provider.py  proxy.py
scripts/: dump_tools.py  gateway_selfcheck.py  simulate_feishu.py  sync_all_to_overleaf.py  test_dingtalk_sign.py  test_stepfun.py
tests/: README.md  test_reply_quote.py  test_reply_quote_integration.py
(+230 files in other folders)
