[project]
name = "open-overleaf-claw"
version = "0.1.0"
description = "ContextBot - Research Assistant with Overleaf integration"
requires-python = ">=3.10"

[project.scripts]
ols = "cli.main:app"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "agent*", "config*", "bus*", "channels*", "providers*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
